--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,12 @@
 		<java.version>22</java.version>
 	</properties>
 	<dependencies>
-
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>5.2.0</version> <!-- or latest -->
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
